# roejobs

./: README.md  pyproject.toml
src/roejobs/: cli.py  jobs.py
tests/: test_jobs.bash
