[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roejobs"
version = "2026.07.11"
description = "Lightweight job runner and supervisor for long-running tasks"
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-only"
authors = [
    { name = "Adrian Röfer", email = "aroefer@uni-bremen.de" }
]

dependencies = ["jinja2"]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
roejobs-server = "roejobs.server:main"
roejobs-cli = "roejobs.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
roejobs = ["templates/**/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
